[CSS] Fixed widgets from overflowing.

--- a/public/assets/default_theme/css/colors.css
+++ b/public/assets/default_theme/css/colors.css
@@ -61,10 +61,6 @@ input[type=file] {
     background: var(--gradient) !important;
 }
 
-.note-info {
-    background: var(--tneidarg) !important;
-}
-
 .section-settings hr {
     background: var(--background-soft) !important;
 }
