--- a/public/assets/default_theme/css/widgets/sections.css
+++ b/public/assets/default_theme/css/widgets/sections.css
@@ -85,6 +85,8 @@
 .section-form {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
+    width: 100%;
     padding: 0.6rem
 }
 .section-form-legend {
@@ -94,92 +96,6 @@
     font-size: 1.62rem
 }
 .form-group {
-    all: unset;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 6px
-}
-.form-group textarea {
-    height: 7rem;
-    max-height: 100%
-}
-.help-block {
-    margin-bottom: 6px
-}
-.help-text {
-    font-style: italic;
-    font-size: 1rem;
-    margin-bottom: 6px
-}
-.help-block>.list-unstyled,
-.alert,
-.alert-danger {
-    display: inline-block;
-    border: solid 2px #FF6347;
-    background-color: #FF634733;
-    border-radius: 0.6rem;
-    padding: 2px 6px;
-    margin-top: 6px;
-    margin-bottom: 6px
-}
-.section-widget {
-    display: flex;
-    flex-direction: column;
-    border-radius: 0.6rem;
-    margin-bottom: 1.3rem
-}
-.section-widget hr {
-    margin-bottom: 0.6rem
-}
-.section-widget-padded {
-    padding: 0.6rem
-}
-.section-title {
-    font-size: 1.3rem;
-    font-weight: 700;
-    margin: 0
-}
-.section-widget-button-like {
-    border-radius: 0.6rem;
-    padding: 6px 10px;
-    margin-top: 6px;
-    cursor: pointer;
-    float: right;
-    align-self: end;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700
-}
-.section-title-details {
-    font-size: 1.3rem;
-    font-weight: 700;
-    border-radius: 0.6rem;
-    padding: 6px 10px 6px 10px
-}
-.section-title-details[open] svg {
-    transform: rotate(180deg);
-    animation: fadeOut 200ms cubic-bezier(0, 0.55, 0.45, 1)
-}
-.section-title-details:not([open]) svg {
-    transform: initial;
-    animation: fadeIn 200ms cubic-bezier(0, 0.55, 0.45, 1)
-}
-.section-title-summary {
-    display: flex;
-    justify-content: space-between
-}
-.section-form {
-    display: flex;
-    flex-direction: column;
-    padding: 0.6rem
-}
-.section-form-legend {
-    margin-top: unset;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: 1.62rem
-}
-.form-group {
-    all: unset;
     display: flex;
     flex-direction: column;
     margin-bottom: 6px
